tests/paczka1/fuzzy1/76586194.err
Error in line 7: A596 S242 58,3
Error in line 9: NcB7VxhozGU A746 70,5
Error in line 25: lhtaVcCc A388 78,5
Error in line 33: yc7 A388 13,6
